--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,9 @@ body.active { overflow: hidden; }
 
 .container { padding-inline: 16px; }
 
-.w-100 { width: 100%; }
+.w-100 {
+  width: 80%;
+}
 
 .btn {
   color: var(--white);
@@ -739,7 +741,6 @@ body.active { overflow: hidden; }
 {
   grid-template-columns: repeat(3, 1fr);
 }
-
 /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
